[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.extfs
license = Affero General Public License v3
description = A Dissect module implementing a parser for the ExtFS file system, the native filesystem for Linux operating systems
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3
